# DecisiveML

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
decisiveml/: __init__.py  helpers.py  indicators.py  montecarlo.py  trendscanning.py
docs/: monte_carlo.md  trend_scanning.md
notebooks/: 1.1-DVR-Research-TrendScanning.ipynb  2.0-DVR-MonteCarloRiskOfRuin.ipynb
tests/: test_helpers.py  test_ml.py
tests/test_data/holidays/: Holidays_Daily_2019-01-02_2020-02-20.csv
