[tool.poetry]
name = "decisiveml"
version = "0.0.1.200414"
description = ""
authors = ["ly <ly>"]

[tool.poetry.dependencies]
python = "^3.6.1"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
