[tool.poetry]
name = "decisiveml"
version = "0.0.2"
description = ""
authors = ["ly"]

[tool.poetry.dependencies]
python = "^3.6.1"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"
nose = "^1.3.7"
pre-commit = "^2.2.0"
coverage = "^5.1"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | vendor
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
